# todo

./: .clang-format  CMakeLists.txt  Dependencies.cmake  README.md
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: ci.yml
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Config.cmake.in  Coverage.cmake  GitVersion.cmake  IPO.cmake  ProjectOptions.cmake  ProjectPackage.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Utils.cmake  build_info.hpp.in
include/task/: config.h  date.h  filter.h  manager.h  parser.h  plugin.h  state.h  task.h
plugins/: CMakeLists.txt  README.md
plugins/src/: example_plugin.cpp  example_plugin.h  plugin_repeat.cpp  plugin_repeat.h
src/: CMakeLists.txt
src/task/: CMakeLists.txt  config.cpp  date.cpp  filter.cpp  manager.cpp  parser.cpp  plugin.cpp
src/todo/: CMakeLists.txt  main.cpp
src/todo/command/: config.hpp  list.hpp  manager.hpp
test/: CMakeLists.txt  main_test.cpp  test_utils.hpp
